--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -2,16 +2,90 @@ name: Melon Ticket Checker
 
 on:
   schedule:
-    - cron: '*/5 * * * *'  # 5분마다 실행
+    - cron: '*/2 * * * *' # 5분마다 실행
+  workflow_dispatch:
+
 jobs:
   check:
     runs-on: ubuntu-latest
     steps:
-      - name: Check Melon Ticket
+      - name: Check Melon Ticket (5/23 다이아몬드석)
         uses: mooyoul/melon-ticket-actions@v1.1.0
         with:
           product-id: 211159
-          schedule-id: 000000
-          seat-id: 1_0
-          slack-incoming-webhook-url: ${{ secrets.SLACK_WEBHOOK_URL }}
-          message: '잔여석 있어요!'
+          schedule-id: 100001
+          seat-id: 12170
+          slack-incoming-webhook-url: ${{ secrets.DISCORD_WEBHOOK }}
+          message: '[5/23] 다이아몬드석에 자석이 생겼어요!'
+
+      - name: Check Melon Ticket (5/23 스탠딩석)
+        uses: mooyoul/melon-ticket-actions@v1.1.0
+        with:
+          product-id: 211159
+          schedule-id: 100001
+          seat-id: 10007
+          slack-incoming-webhook-url: ${{ secrets.DISCORD_WEBHOOK }}
+          message: '[5/23] 스탠딩석에 자석이 생겼어요!'
+
+      - name: Check Melon Ticket (5/23 일반지정석)
+        uses: mooyoul/melon-ticket-actions@v1.1.0
+        with:
+          product-id: 211159
+          schedule-id: 100001
+          seat-id: 12171
+          slack-incoming-webhook-url: ${{ secrets.DISCORD_WEBHOOK }}
+          message: '[5/23] 일반지정석에 자석이 생겼어요!'
+
+      - name: Check Melon Ticket (5/24 다이아몬드석)
+        uses: mooyoul/melon-ticket-actions@v1.1.0
+        with:
+          product-id: 211159
+          schedule-id: 100002
+          seat-id: 12170
+          slack-incoming-webhook-url: ${{ secrets.DISCORD_WEBHOOK }}
+          message: '[5/24] 다이아몬드석에 자석이 생겼어요!'
+
+      - name: Check Melon Ticket (5/24 스탠딩석)
+        uses: mooyoul/melon-ticket-actions@v1.1.0
+        with:
+          product-id: 211159
+          schedule-id: 100002
+          seat-id: 10007
+          slack-incoming-webhook-url: ${{ secrets.DISCORD_WEBHOOK }}
+          message: '[5/24] 스탠딩석에 자석이 생겼어요!'
+
+      - name: Check Melon Ticket (5/24 일반지정석)
+        uses: mooyoul/melon-ticket-actions@v1.1.0
+        with:
+          product-id: 211159
+          schedule-id: 100002
+          seat-id: 12171
+          slack-incoming-webhook-url: ${{ secrets.DISCORD_WEBHOOK }}
+          message: '[5/24] 일반지정석에 자석이 생겼어요!'
+
+      - name: Check Melon Ticket (5/25 다이아몬드석)
+        uses: mooyoul/melon-ticket-actions@v1.1.0
+        with:
+          product-id: 211159
+          schedule-id: 100003
+          seat-id: 12170
+          slack-incoming-webhook-url: ${{ secrets.DISCORD_WEBHOOK }}
+          message: '[5/25] 다이아몬드석에 자석이 생겼어요!'
+
+      - name: Check Melon Ticket (5/25 스탠딩석)
+        uses: mooyoul/melon-ticket-actions@v1.1.0
+        with:
+          product-id: 211159
+          schedule-id: 100003
+          seat-id: 10007
+          slack-incoming-webhook-url: ${{ secrets.DISCORD_WEBHOOK }}
+          message: '[5/25] 스탠딩석에 자석이 생겼어요!'
+
+      - name: Check Melon Ticket (5/25 일반지정석)
+        uses: mooyoul/melon-ticket-actions@v1.1.0
+        with:
+          product-id: 211159
+          schedule-id: 100003
+          seat-id: 12171
+          slack-incoming-webhook-url: ${{ secrets.DISCORD_WEBHOOK }}
+          message: '[5/25] 일반지정석에 자석이 생겼어요!'
