--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -2,90 +2,50 @@ name: Melon Ticket Checker
 
 on:
   schedule:
-    - cron: '*/10 * * * *' # 3분마다 실행
+    - cron: '*/10 * * * *' # 10분마다 실행
   workflow_dispatch:
 
 jobs:
   check:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        include:
+          - name: "[5/23] 다이아몬드석"
+            schedule-id: 100001
+            seat-id: 12170
+          - name: "[5/23] 스탠딩석"
+            schedule-id: 100001
+            seat-id: 10007
+          - name: "[5/23] 일반지정석"
+            schedule-id: 100001
+            seat-id: 12171
+          - name: "[5/24] 다이아몬드석"
+            schedule-id: 100002
+            seat-id: 12170
+          - name: "[5/24] 스탠딩석"
+            schedule-id: 100002
+            seat-id: 10007
+          - name: "[5/24] 일반지정석"
+            schedule-id: 100002
+            seat-id: 12171
+          - name: "[5/25] 다이아몬드석"
+            schedule-id: 100003
+            seat-id: 12170
+          - name: "[5/25] 스탠딩석"
+            schedule-id: 100003
+            seat-id: 10007
+          - name: "[5/25] 일반지정석"
+            schedule-id: 100003
+            seat-id: 12171
+
     steps:
-      - name: Check Melon Ticket (5/23 다이아몬드석)
-        uses: chooing/melon-ticket-actions-discord@main
+      - name: Check Melon Ticket ${{ matrix.name }}
+        uses: mooyoul/melon-ticket-actions@v1.1.0
         with:
           product-id: 211159
-          schedule-id: 100001
-          seat-id: 12170
+          schedule-id: ${{ matrix.schedule-id }}
+          seat-id: ${{ matrix.seat-id }}
           slack-incoming-webhook-url: ${{ secrets.DISCORD_WEBHOOK }}
-          message: '[5/23] 다이아몬드석에 자석이 생겼어요!'
-
-      - name: Check Melon Ticket (5/23 스탠딩석)
-        uses: chooing/melon-ticket-actions-discord@main
-        with:
-          product-id: 211159
-          schedule-id: 100001
-          seat-id: 10007
-          slack-incoming-webhook-url: ${{ secrets.DISCORD_WEBHOOK }}
-          message: '[5/23] 스탠딩석에 자석이 생겼어요!'
-
-      - name: Check Melon Ticket (5/23 일반지정석)
-        uses: chooing/melon-ticket-actions-discord@main
-        with:
-          product-id: 211159
-          schedule-id: 100001
-          seat-id: 12171
-          slack-incoming-webhook-url: ${{ secrets.DISCORD_WEBHOOK }}
-          message: '[5/23] 일반지정석에 자석이 생겼어요!'
-
-      - name: Check Melon Ticket (5/24 다이아몬드석)
-        uses: chooing/melon-ticket-actions-discord@main
-        with:
-          product-id: 211159
-          schedule-id: 100002
-          seat-id: 12170
-          slack-incoming-webhook-url: ${{ secrets.DISCORD_WEBHOOK }}
-          message: '[5/24] 다이아몬드석에 자석이 생겼어요!'
-
-      - name: Check Melon Ticket (5/24 스탠딩석)
-        uses: chooing/melon-ticket-actions-discord@main
-        with:
-          product-id: 211159
-          schedule-id: 100002
-          seat-id: 10007
-          slack-incoming-webhook-url: ${{ secrets.DISCORD_WEBHOOK }}
-          message: '[5/24] 스탠딩석에 자석이 생겼어요!'
-
-      - name: Check Melon Ticket (5/24 일반지정석)
-        uses: chooing/melon-ticket-actions-discord@main
-        with:
-          product-id: 211159
-          schedule-id: 100002
-          seat-id: 12171
-          slack-incoming-webhook-url: ${{ secrets.DISCORD_WEBHOOK }}
-          message: '[5/24] 일반지정석에 자석이 생겼어요!'
-
-      - name: Check Melon Ticket (5/25 다이아몬드석)
-        uses: chooing/melon-ticket-actions-discord@main
-        with:
-          product-id: 211159
-          schedule-id: 100003
-          seat-id: 12170
-          slack-incoming-webhook-url: ${{ secrets.DISCORD_WEBHOOK }}
-          message: '[5/25] 다이아몬드석에 자석이 생겼어요!'
-
-      - name: Check Melon Ticket (5/25 스탠딩석)
-        uses: chooing/melon-ticket-actions-discord@main
-        with:
-          product-id: 211159
-          schedule-id: 100003
-          seat-id: 10007
-          slack-incoming-webhook-url: ${{ secrets.DISCORD_WEBHOOK }}
-          message: '[5/25] 스탠딩석에 자석이 생겼어요!'
-
-      - name: Check Melon Ticket (5/25 일반지정석)
-        uses: chooing/melon-ticket-actions-discord@main
-        with:
-          product-id: 211159
-          schedule-id: 100003
-          seat-id: 12171
-          slack-incoming-webhook-url: ${{ secrets.DISCORD_WEBHOOK }}
-          message: '[5/25] 일반지정석에 자석이 생겼어요!'
+          message: '${{ matrix.name }}에 좌석이 생겼어요! 🎉'
+          notify-when-unavailable: true # 좌석이 없을 때도 알림
