--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -2,48 +2,90 @@ name: Melon Ticket Checker
 
 on:
   schedule:
-    - cron: '*/10 * * * *' # 10분만능 실행
+    - cron: '*/10 * * * *' # 10분마다 실행
   workflow_dispatch:
 
 jobs:
   check:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        include:
-          - date: '5/23'
-            schedule-id: 100001
-          - date: '5/24'
-            schedule-id: 100002
-          - date: '5/25'
-            schedule-id: 100003
     steps:
-      - name: Check Melon Ticket - Diamond
-        uses: chooing/melon-ticket-actions-discord@main
+      - name: Check Melon Ticket (5/23 다이아몬드석)
+        uses: chooing/melon-ticket-actions-discord-with-area@main
         with:
           product-id: 211159
-          schedule-id: ${{ matrix.schedule-id }}
+          schedule-id: 100001
           seat-id: 12170
           slack-incoming-webhook-url: ${{ secrets.DISCORD_WEBHOOK }}
-          message: '[${{ matrix.date }}] 다이아몬드석에 좌석이 생겼어요!'
-          notify-when-unavailable: true
+          message: '[5/23] 다이아몬드석에 자리가 생겼어요!'
 
-      - name: Check Melon Ticket - Standing
-        uses: chooing/melon-ticket-actions-discord@main
+      - name: Check Melon Ticket (5/23 스탠딩석)
+        uses: chooing/melon-ticket-actions-discord-with-area@main
         with:
           product-id: 211159
-          schedule-id: ${{ matrix.schedule-id }}
+          schedule-id: 100001
           seat-id: 10007
           slack-incoming-webhook-url: ${{ secrets.DISCORD_WEBHOOK }}
-          message: '[${{ matrix.date }}] 스탠딩석에 좌석이 생겼어요!'
-          notify-when-unavailable: true
+          message: '[5/23] 스탠딩석에 자리가 생겼어요!'
 
-      - name: Check Melon Ticket - 일반지정석
-        uses: chooing/melon-ticket-actions-discord@main
+      - name: Check Melon Ticket (5/23 일반지정석)
+        uses: chooing/melon-ticket-actions-discord-with-area@main
         with:
           product-id: 211159
-          schedule-id: ${{ matrix.schedule-id }}
+          schedule-id: 100001
           seat-id: 12171
           slack-incoming-webhook-url: ${{ secrets.DISCORD_WEBHOOK }}
-          message: '[${{ matrix.date }}] 일반지정석에 좌석이 생겼어요!'
-          notify-when-unavailable: true
+          message: '[5/23] 일반지정석에 자리가 생겼어요!'
+
+      - name: Check Melon Ticket (5/24 다이아몬드석)
+        uses: chooing/melon-ticket-actions-discord-with-area@main
+        with:
+          product-id: 211159
+          schedule-id: 100002
+          seat-id: 12170
+          slack-incoming-webhook-url: ${{ secrets.DISCORD_WEBHOOK }}
+          message: '[5/24] 다이아몬드석에 자리가 생겼어요!'
+
+      - name: Check Melon Ticket (5/24 스탠딩석)
+        uses: chooing/melon-ticket-actions-discord-with-area@main
+        with:
+          product-id: 211159
+          schedule-id: 100002
+          seat-id: 10007
+          slack-incoming-webhook-url: ${{ secrets.DISCORD_WEBHOOK }}
+          message: '[5/24] 스탠딩석에 자리가 생겼어요!'
+
+      - name: Check Melon Ticket (5/24 일반지정석)
+        uses: chooing/melon-ticket-actions-discord-with-area@main
+        with:
+          product-id: 211159
+          schedule-id: 100002
+          seat-id: 12171
+          slack-incoming-webhook-url: ${{ secrets.DISCORD_WEBHOOK }}
+          message: '[5/24] 일반지정석에 자리가 생겼어요!'
+
+      - name: Check Melon Ticket (5/25 다이아몬드석)
+        uses: chooing/melon-ticket-actions-discord-with-area@main
+        with:
+          product-id: 211159
+          schedule-id: 100003
+          seat-id: 12170
+          slack-incoming-webhook-url: ${{ secrets.DISCORD_WEBHOOK }}
+          message: '[5/25] 다이아몬드석에 자리가 생겼어요!'
+
+      - name: Check Melon Ticket (5/25 스탠딩석)
+        uses: chooing/melon-ticket-actions-discord-with-area@main
+        with:
+          product-id: 211159
+          schedule-id: 100003
+          seat-id: 10007
+          slack-incoming-webhook-url: ${{ secrets.DISCORD_WEBHOOK }}
+          message: '[5/25] 스탠딩석에 자리가 생겼어요!'
+
+      - name: Check Melon Ticket (5/25 일반지정석)
+        uses: chooing/melon-ticket-actions-discord-with-area@main
+        with:
+          product-id: 211159
+          schedule-id: 100003
+          seat-id: 12171
+          slack-incoming-webhook-url: ${{ secrets.DISCORD_WEBHOOK }}
+          message: '[5/25] 일반지정석에 자리가 생겼어요!'
