--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -3,14 +3,14 @@ name: Melon Ticket Checker
 on:
   schedule:
     - cron: '*/10 * * * *' # 10분마다 실행
-  workflow_dispatch:
+  workflow_dispatch: # 수동 실행도 가능하게 함
 
 jobs:
   check:
     runs-on: ubuntu-latest
     steps:
       - name: Check Melon Ticket (5/23 다이아몬드석)
-        uses: chooing/melon-ticket-actions-discord-with-area@main
+        uses: mooyoul/melon-ticket-actions@v1.1.0
         with:
           product-id: 211159
           schedule-id: 100001
@@ -19,7 +19,7 @@ jobs:
           message: '[5/23] 다이아몬드석에 자리가 생겼어요!'
 
       - name: Check Melon Ticket (5/23 스탠딩석)
-        uses: chooing/melon-ticket-actions-discord-with-area@main
+        uses: mooyoul/melon-ticket-actions@v1.1.0
         with:
           product-id: 211159
           schedule-id: 100001
@@ -28,7 +28,7 @@ jobs:
           message: '[5/23] 스탠딩석에 자리가 생겼어요!'
 
       - name: Check Melon Ticket (5/23 일반지정석)
-        uses: chooing/melon-ticket-actions-discord-with-area@main
+        uses: mooyoul/melon-ticket-actions@v1.1.0
         with:
           product-id: 211159
           schedule-id: 100001
@@ -37,7 +37,7 @@ jobs:
           message: '[5/23] 일반지정석에 자리가 생겼어요!'
 
       - name: Check Melon Ticket (5/24 다이아몬드석)
-        uses: chooing/melon-ticket-actions-discord-with-area@main
+        uses: mooyoul/melon-ticket-actions@v1.1.0
         with:
           product-id: 211159
           schedule-id: 100002
@@ -46,7 +46,7 @@ jobs:
           message: '[5/24] 다이아몬드석에 자리가 생겼어요!'
 
       - name: Check Melon Ticket (5/24 스탠딩석)
-        uses: chooing/melon-ticket-actions-discord-with-area@main
+        uses: mooyoul/melon-ticket-actions@v1.1.0
         with:
           product-id: 211159
           schedule-id: 100002
@@ -55,7 +55,7 @@ jobs:
           message: '[5/24] 스탠딩석에 자리가 생겼어요!'
 
       - name: Check Melon Ticket (5/24 일반지정석)
-        uses: chooing/melon-ticket-actions-discord-with-area@main
+        uses: mooyoul/melon-ticket-actions@v1.1.0
         with:
           product-id: 211159
           schedule-id: 100002
@@ -64,7 +64,7 @@ jobs:
           message: '[5/24] 일반지정석에 자리가 생겼어요!'
 
       - name: Check Melon Ticket (5/25 다이아몬드석)
-        uses: chooing/melon-ticket-actions-discord-with-area@main
+        uses: mooyoul/melon-ticket-actions@v1.1.0
         with:
           product-id: 211159
           schedule-id: 100003
@@ -73,7 +73,7 @@ jobs:
           message: '[5/25] 다이아몬드석에 자리가 생겼어요!'
 
       - name: Check Melon Ticket (5/25 스탠딩석)
-        uses: chooing/melon-ticket-actions-discord-with-area@main
+        uses: mooyoul/melon-ticket-actions@v1.1.0
         with:
           product-id: 211159
           schedule-id: 100003
@@ -82,7 +82,7 @@ jobs:
           message: '[5/25] 스탠딩석에 자리가 생겼어요!'
 
       - name: Check Melon Ticket (5/25 일반지정석)
-        uses: chooing/melon-ticket-actions-discord-with-area@main
+        uses: mooyoul/melon-ticket-actions@v1.1.0
         with:
           product-id: 211159
           schedule-id: 100003
