--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -2,7 +2,7 @@ name: Melon Ticket Checker (Custom)
 
 on:
   schedule:
-    - cron: '*/1 * * * *' # 10분마다 실행
+    - cron: '*/1 * * * *' # 1분마다 실행
   workflow_dispatch: # 수동 실행도 가능하게 함
 
 jobs:
@@ -37,7 +37,7 @@ jobs:
               result=$(curl -s -H 'User-Agent: Mozilla/5.0' \
                 "https://ticket.melon.com/api/product/getBlockGradeSeatCount.json?productId=211159&scheduleId=$schedule_id")
 
-              remain=$(echo "$result" | jq ".summary[] | select(.seatGradeNo==\"$seat_id\") | .realSeatCntlk")
+              remain=$(echo "$result" | jq ".summary[] | select(.seatGradeNo == $seat_id) | .realSeatCntlk")
 
               if [[ "$remain" == "null" || "$remain" == "" ]]; then
                 remain=0
