--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -2,9 +2,9 @@ name: Melon Ticket Checker (Custom)
 
 on:
   schedule:
-    - cron: '*/10 * * * *' # 11분마다 실행
+    - cron: '*/10 * * * *' # 10분마다 실행
   workflow_dispatch: # 수동 실행도 가능하게 함
-test: force push to run scheduled workflow
+테스트: force push to run scheduled workflow
 
 jobs:
   check:
