--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -2,8 +2,9 @@ name: Melon Ticket Checker (Custom)
 
 on:
   schedule:
-    - cron: '*/5 * * * *' # 10분마다 실행
+    - cron: '*/10 * * * *' # 10분마다 실행
   workflow_dispatch: # 수동 실행도 가능하게 함
+# just to trigger a push
 
 jobs:
   check:
