--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -2,7 +2,7 @@ name: Melon Ticket Checker (Custom)
 
 on:
   schedule:
-    - cron: '*/10 * * * *'  # 매 10분마다 실행
+    - cron: '*/10 * * * *'  # 10분마다 실행
   workflow_dispatch:        # 수동 실행도 가능하게 함
 
 jobs:
@@ -16,9 +16,9 @@ jobs:
         shell: bash
         run: |
           dates=(
-            "100001|5/23"
-            "100002|5/24"
-            "100003|5/25"
+            "100001|5-23"
+            "100002|5-24"
+            "100003|5-25"
           )
 
           declare -A seats=(
@@ -37,13 +37,13 @@ jobs:
               result=$(curl -s -H 'User-Agent: Mozilla/5.0' \
                 "https://ticket.melon.com/api/product/getBlockGradeSeatCount.json?productId=211159&scheduleId=$schedule_id")
 
-              remain=$(echo "$result" | jq ".summary[] | select(.seatGradeNo == \"$seat_id\") | .realSeatCntlk")
+              remain=$(echo "$result" | jq ".summary[] | select(.seatGradeNo == $seat_id) | .realSeatCntlk")
 
               if [[ "$remain" == "null" || "$remain" == "" ]]; then
                 remain=0
               fi
 
-              area_raw=$(echo "$result" | jq -r ".summary[] | select(.seatGradeNo == \"$seat_id\") | .sntvList")
+              area_raw=$(echo "$result" | jq -r ".summary[] | select(.seatGradeNo == $seat_id) | .sntvList")
               formatted_area=""
               IFS=';' read -ra parts <<< "$area_raw"
               for part in "${parts[@]}"; do
@@ -66,5 +66,6 @@ jobs:
               sleep 1
             done
           done
+
         env:
           DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK }}
