trigger: force push for cron

--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -68,3 +68,5 @@ jobs:
           done
         env:
           DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK }}
+
+# trigger: dummy push to activate cron
