--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -2,13 +2,16 @@ name: Melon Ticket Checker (Custom)
 
 on:
   schedule:
-    - cron: '*/10 * * * *'  # 매 10분마다 실행
+    - cron: '*/10 * * * *'  # 매 10분마다 실행 (UTC 기준)
   workflow_dispatch:
 
 jobs:
   check:
     runs-on: ubuntu-latest
     steps:
+      - name: Print datetime (UTC)
+        run: date
+
       - name: Checkout code
         uses: actions/checkout@v3
 
